Put libbat/appbat on a slower timer, because the builds are so long.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -34,7 +34,7 @@ from bzr_buildbot import BzrPoller
 # Toplevel configuration, used by the builder/scheduler setup.
 
 stable_timer_hours = 1
-stable_timer_seconds = stable_timer_hours * 60 * 60
+slow_stable_timer_hours = 6
 
 bzr_toplevel = "http://bzr.linuxfoundation.org/"
 
@@ -73,6 +73,9 @@ lsb_dependencies = { "tet-harness": ["azov-qt3-tests", "azov-qt4-tests",
 # This funny-sounding setting controls which architecture we hold
 # responsible for building architecture-independent components.
 lsb_buildslave_arch_indep_arch = "x86_64"
+
+stable_timer_seconds = stable_timer_hours * 60 * 60
+slow_stable_timer_seconds = slow_stable_timer_hours * 60 * 60
 
 # Helper functions
 
@@ -196,7 +199,7 @@ for arch in lsb_archs:
     sch_libbat = scheduler.Scheduler(name="sch-libbat-" + arch,
                                      branch="lsb/devel/appbat",
                                      builderNames=["libbat-" + arch],
-                                     treeStableTimer=stable_timer_seconds)
+                                     treeStableTimer=slow_stable_timer_seconds)
     sch_appbat = scheduler.Triggerable(name="sch-appbat-" + arch,
                                        builderNames=["appbat-" + arch])
 
