Fix Moblin app checker build to include new repo.

--- a/moblin_master.cfg
+++ b/moblin_master.cfg
@@ -180,7 +180,8 @@ app_checker_builder = factory.BuildFactory()
 #                    mode="update", timeout=60*60, workdir="misc-test"))
 
 # ShellCommand version of checkout step.
-app_checker_repos = ["app-checker", "moblin-isv-tests", "misc-test"]
+app_checker_repos = ["app-checker", "moblin-isv-tests", "misc-test", 
+                     "tetj-python"]
 for repo in app_checker_repos:
     app_checker_builder.addStep(
         ShellCommand(command=["bzr", "checkout",
