Enable forcing builds on the LSB web interface with a password.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -14,6 +14,7 @@ from buildbot.steps.transfer import FileUpload
 from buildbot.process.properties import WithProperties
 from buildbot.status import html
 from buildbot.status import words
+from buildbot.status.web.auth import HTPasswdAuth
 
 from lfbuildbot import PropMasterShellCommand, LSBBuildPackage, \
     LSBBuildFromPackaging
@@ -32,6 +33,8 @@ from bzr_buildbot import BzrPoller
 # Their schedulers are prefixed with "sch-", like the others.
 
 # Toplevel configuration, used by the builder/scheduler setup.
+
+web_htpasswd_path = "/data/buildbot/buildbot_htpasswd"
 
 stable_timer_hours = 1
 slow_stable_timer_hours = 6
@@ -559,7 +562,8 @@ c['builders'] = lsb_builds
 
 c['status'] = []
 
-c['status'].append(html.WebStatus(http_port=8009, allowForce=False))
+c['status'].append(html.WebStatus(http_port=8009, allowForce=True,
+                                  auth=HTPasswdAuth(web_htpasswd_path)))
 
 c['status'].append(words.IRC(host="irc.linuxfoundation.org", nick="lsb_bb",
                              channels=["#lsb"], allowForce=True,
