Add distribution-checker (DTK Manager 2) to LSB builds.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -45,7 +45,8 @@ lsb_archs = ["x86_64", "x86", "ia64", "ppc32", "ppc64", "s390", "s390x"]
 lsb_bzr_sdk_projects = ["lsbdev-base", "lsbdev-cc", "lsbdev-c++",
                         "lsbdev-desktop", "lsbdev-qt", "lsbdev-qt3"]
 lsb_pkg_subdir_projects = ["app-checker", "azov-qt3-tests", "azov-qt4-tests",
-                           "azov-xml2-tests", "desktop-test", "dtk-manager", 
+                           "azov-xml2-tests", "desktop-test", 
+                           "distribution-checker", "dtk-manager", 
                            "libstdcpp-test", "lsb-setup", "lsb-xvfb", 
                            "lsbappchk-perl", "lsbappchk-python", 
                            "lsbappchk-sh", "lsbsi-tools", 
