Use the new package subdir for the build_env projects in the SDK.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -42,8 +42,7 @@ slow_stable_timer_hours = 6
 bzr_toplevel = "http://bzr.linuxfoundation.org/"
 
 lsb_archs = ["x86_64", "x86", "ia64", "ppc32", "ppc64", "s390", "s390x"]
-lsb_bzr_sdk_projects = ["lsbdev-base", "lsbdev-cc", "lsbdev-c++",
-                        "lsbdev-desktop", "lsbdev-qt", "lsbdev-qt3"]
+lsb_bzr_sdk_projects = ["lsbdev-c++", "lsbdev-qt", "lsbdev-qt3"]
 lsb_pkg_subdir_projects = ["app-checker", "azov-qt3-tests", "azov-qt4-tests",
                            "azov-xml2-tests", "desktop-test", 
                            "distribution-checker", "dtk-manager", 
@@ -324,6 +323,15 @@ for arch in lsb_archs:
     build_sdk.addStep(ShellCommand(command=["rm", "-rf", 
                                             "../sdk-results"],
                                    name="rm-old-results"))
+    build_sdk.addStep(
+        ShellCommand(command=["mkdir", "-p", "../sdk-results/build_env"],
+                     name="mkdir_base", workdir="build_env"))
+    build_sdk.addStep(
+        ShellCommand(command="cd package && make BZR_ROOT=../..", 
+                     name="build_base", workdir="build_env"))
+    build_sdk.addStep(
+        ShellCommand(command="cp package/*.rpm ../sdk-results/build_env", 
+                     name="copy_base", workdir="build_env"))
     for sdk_project in lsb_bzr_sdk_projects:
         build_sdk.addStep(ShellCommand(command=['mkdir', '-p', 
                                                 '../sdk-results/' + sdk_project],
