--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -328,7 +328,8 @@ for arch in lsb_archs:
                      name="mkdir_base", workdir="build_env"))
     build_sdk.addStep(
         ShellCommand(command="cd package && make BZR_ROOT=../..", 
-                     name="build_base", workdir="build_env"))
+                     name="build_base", workdir="build_env", 
+                     haltOnFailure=True))
     build_sdk.addStep(
         ShellCommand(command="cp package/*.rpm ../sdk-results/build_env", 
                      name="copy_base", workdir="build_env"))
@@ -339,7 +340,8 @@ for arch in lsb_archs:
         sdk_command = "cd " + sdk_project + \
             " && make rpm_package BZR_ROOT=../.."
         build_sdk.addStep(ShellCommand(command=sdk_command,
-                                       name="build_" + sdk_project))
+                                       name="build_" + sdk_project,
+                                       haltOnFailure=True))
         build_sdk.addStep(
             ShellCommand(command="cp %s/*.rpm ../sdk-results/%s" 
                                  % (sdk_project, sdk_project),
