Add lsb-xdg-utils to LSB.
Also, for packaging projects, allow None as the extra repo.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -59,7 +59,8 @@ lsb_packaging_projects = [("lsbappchk", "misc-test"),
                           ("lsbcmdchk", "misc-test"),
                           ("lsbdev-runner", "build_env"),
                           ("lsblibchk", "misc-test"),
-                          ("lsbpkgchk", "misc-test")]
+                          ("lsbpkgchk", "misc-test"),
+                          ("lsb-xdg-utils", None)]
 
 lsb_arch_indep_projects = ["lsb-setup", "lsbappchk-perl", "lsbappchk-python", 
                            "lsbappchk-sh", "perl-test", "task-pkgs"]
@@ -140,7 +141,7 @@ c['slavePortnum'] = 9988
 
 c['change_source'] = []
 lsb_change_sources = lsb_pkg_subdir_projects + \
-    [x[1] for x in lsb_packaging_projects] + ["appbat"]
+    [x[1] for x in lsb_packaging_projects if x[1] is not None] + ["appbat"]
 added = []
 for branch in lsb_change_sources:
     if branch in added:
@@ -241,7 +242,9 @@ for (prj, repo) in lsb_packaging_projects:
         archlist = [lsb_buildslave_arch_indep_arch]
     else:
         archlist = lsb_archs
-    branches = [os.path.join("lsb/devel", repo), "lsb/devel/packaging"]
+    branches = ["lsb/devel/packaging"]
+    if repo is not None:
+        branches.append(os.path.join("lsb/devel", repo))
     for arch in archlist:
         prj_name = "%s-%s" % (prj, arch)
         sch = \
@@ -433,9 +436,10 @@ for arch in lsb_archs:
             build_arch = arch
 
         b = factory.BuildFactory()
-        b.addStep(Bzr(baseURL=bzr_toplevel,
-                      defaultBranch="lsb/devel/%s" % repo,
-                      workdir=repo, mode="update", timeout=4*60*60))
+        if repo is not None:
+            b.addStep(Bzr(baseURL=bzr_toplevel,
+                          defaultBranch="lsb/devel/%s" % repo,
+                          workdir=repo, mode="update", timeout=4*60*60))
         b.addStep(ShellCommand(command=["rm", "-rf", "../packaging"],
                                name="clear-old-packaging"))
         b.addStep(ShellCommand(
