--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -330,7 +330,7 @@ for arch in lsb_archs:
         ShellCommand(command=["mkdir", "-p", "../sdk-results/build_env"],
                      name="mkdir_base", workdir="build_env"))
     build_sdk.addStep(
-        ShellCommand(command="cd package && make BZR_ROOT=../..", 
+        ShellCommand(command="cd package && make BZRTREES=../..", 
                      name="build_base", workdir="build_env", 
                      haltOnFailure=True))
     build_sdk.addStep(
