Clean the build_env package tree before and after each base build.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -330,12 +330,16 @@ for arch in lsb_archs:
         ShellCommand(command=["mkdir", "-p", "../sdk-results/build_env"],
                      name="mkdir_base", workdir="build_env"))
     build_sdk.addStep(
-        ShellCommand(command="cd package && make BZRTREES=../..", 
+        ShellCommand(command="cd package && make clean " + 
+                             "&& make BZRTREES=../..", 
                      name="build_base", workdir="build_env", 
                      haltOnFailure=True))
     build_sdk.addStep(
         ShellCommand(command="cp package/*.rpm ../sdk-results/build_env", 
                      name="copy_base", workdir="build_env"))
+    build_sdk.addStep(
+        ShellCommand(command="cd package && make clean",
+                     name="clean_base", workdir="build_env", alwaysRun=True))
     for sdk_project in lsb_bzr_sdk_projects:
         build_sdk.addStep(ShellCommand(command=['mkdir', '-p', 
                                                 '../sdk-results/' + sdk_project],
