Add check steps to libbat/appbat.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -500,6 +500,8 @@ for arch in lsb_archs:
     libbat.addStep(Configure(command=["./configure.libbat"], workdir="appbat"))
     libbat.addStep(Compile(command=["make", "libbat", "ENTITYCHECK_QUIET=-q"], 
                            workdir="appbat"))
+    libbat.addStep(Compile(command=["make", "check-libbat"], workdir="appbat",
+                           name="check-libbat", haltOnFailure=True))
     libbat.addStep(ShellCommand(command="cd rpm && make libbat",
                                 name="build-pkg", workdir="appbat"))
     libbat.addStep(ShellCommand(
@@ -542,13 +544,19 @@ for arch in lsb_archs:
     appbat.addStep(Compile(command=["make", "appbat", "ENTITYCHECK_QUIET=-q"], 
                            workdir="appbat", name="build-appbat", 
                            timeout=1800))
+    appbat.addStep(Compile(command=["make", "check-appbat"], workdir="appbat",
+                           name="check-appbat", haltOnFailure=True))
     appbat.addStep(Compile(command=["make", "desktop", 
                                     "ENTITYCHECK_QUIET=-q"], 
                            workdir="appbat", name="build-desktop", 
                            timeout=1800))
+    appbat.addStep(Compile(command=["make", "check-desktop"], workdir="appbat",
+                           name="check-desktop", haltOnFailure=True))
     appbat.addStep(Compile(command=["make", "addons", "ENTITYCHECK_QUIET=-q"], 
                            workdir="appbat", name="build-addons",
                            timeout=1800))
+    appbat.addStep(Compile(command=["make", "check-addons"], workdir="appbat",
+                           name="check-addons", haltOnFailure=True))
     appbat.addStep(ShellCommand(command="cd rpm && make",
                                 name="build-pkg", workdir="appbat"))
     appbat.addStep(ShellCommand(
