Prioritize LSB builds so the SDK is always built or updated first.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -110,6 +110,22 @@ def add_dependency_triggers(project, arch, builder):
 # a shorter alias to save typing.
 c = BuildmasterConfig = {}
 
+# Priority order.  In general, we don't care what order things build in,
+# or the order is sufficiently determined by triggers.  SDK builds and 
+# updates can affect other builds, however, and should therefore be done
+# first, and the update should happen as soon after the build as possible.
+
+def prioritize(buildmaster, builders):
+    sdk_builders = []
+    for jobname in ("build-sdk", "update-sdk"):
+        for builder in builders[:]:
+            if builder.name[:len(jobname)] == jobname:
+                builders.remove(builder)
+                sdk_builders.append(builder)
+    return sdk_builders + builders
+
+c['prioritizeBuilders'] = prioritize
+
 ####### BUILDSLAVES
 
 # the 'slaves' list defines the set of allowable buildslaves. Each element is
