Run tests on the appbat, and send results with everything else.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -65,14 +65,16 @@ lsb_packaging_projects = [("lsbappchk", "misc-test"),
 lsb_arch_indep_projects = ["lsb-setup", "lsbappchk-perl", "lsbappchk-python", 
                            "lsbappchk-sh", "perl-test", "task-pkgs"]
 
-lsb_dependencies = { "tet-harness": ["azov-qt3-tests", "azov-qt4-tests",
-                                     "azov-xml2-tests", "desktop-test", 
-                                     "printing-test", "runtime-test", 
-                                     "t2c-cpp-tests", "t2c-desktop-tests", 
-                                     "xts5-test"],
+lsb_dependencies = { "tet-harness": ["appbat", "azov-qt3-tests", 
+                                     "azov-qt4-tests", "azov-xml2-tests", 
+                                     "desktop-test", "printing-test", 
+                                     "runtime-test", "t2c-cpp-tests", 
+                                     "t2c-desktop-tests", "xts5-test"],
                      "qmtest-harness": ["libstdcpp-test"],
                      "lsbappchk-python": ["python-test"],
-                     "libbat": ["appbat"] }
+                     "libbat": ["appbat"],
+                     "lsbappchk": ["appbat"],
+                     "lsbpkgchk": ["appbat"]}
 
 # This funny-sounding setting controls which architecture we hold
 # responsible for building architecture-independent components.
@@ -578,6 +580,9 @@ for arch in lsb_archs:
     appbat.addStep(ShellCommand(
             command="find rpm -name '*.rpm' -exec cp '{}' ../results ';'",
             workdir="appbat", name="copy-results"))
+    appbat.addStep(ShellCommand(command=["run-appbat-tests", 
+                                         "../results", "../results/tests"],
+                                workdir="appbat", name="run-appbat-tests"))
     appbat.addStep(ShellCommand(command=["tar", "czf", "../results.tar.gz", 
                                          "../results"],
                                 workdir="appbat", name="pack-results"))
