Create results dir if needed, and don't fail the build if tests fail.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -589,7 +589,8 @@ for arch in lsb_archs:
     appbat.addStep(
         FileUpload(slavesrc="../results.tar.gz", 
                    masterdest="appbat-results-%s.tar.gz" % build_arch,
-                   workdir="appbat", name="upload-results"))
+                   workdir="appbat", name="upload-results", 
+                   flunkOnFailure=False))
     add_dependency_triggers("appbat", build_arch, appbat)
 
     lsb_builds.append(
