Add new function signature checker and Moblin data to autobuilders.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -47,6 +47,7 @@ lsb_pkg_subdir_projects = ["app-checker", "azov-qt3-tests", "azov-qt4-tests",
                            "azov-xml2-tests", "desktop-test", 
                            "distribution-checker", "dtk-manager", 
                            "libstdcpp-test", "lsb-setup", "lsb-xvfb", 
+                           "lsb-functions-signature-checker",
                            "lsbappchk-perl", "lsbappchk-python", 
                            "lsbappchk-sh", "lsbsi-tools", 
                            "makelsbpkg", "olver-core-tests", "perl-test",
