--- a/moblin_master.cfg
+++ b/moblin_master.cfg
@@ -26,6 +26,7 @@ moblin_osv_tests_projects = ["moblin-test-kernel", "moblin-test-media",
                              "moblin-test-graphics", "moblin-test-perf-power",
                              "moblin-test-bickley"]
 moblin_change_sources = ["app-checker", "distribution-checker", 
+                         "moblin-functions-signature-checker-data", 
                          "moblin-osv-tests", "moblin-isv-tests", "misc-test", 
                          "moblin-xvfb"]
 
@@ -103,7 +104,9 @@ for (prj, branch_names) in [("build-moblin-osv-tests", ["moblin-osv-tests"]),
                             ("build-moblin-distribution-checker", 
                              ["distribution-checker"]),
                             ("build-moblin-xvfb", ["moblin-xvfb"]),
-                            ("build-libchk-me", ["misc-test"])]:
+                            ("build-libchk-me", ["misc-test"]),
+                            ("build-moblin-functions-signature-checker-data",
+                             ["moblin-functions-signature-checker-data"])]:
     branches = ["moblin/devel/" + x for x in branch_names]
     prj_scheduler = \
         scheduler.AnyBranchScheduler(name=prj, branches=branches,
@@ -277,6 +280,25 @@ libchk_me_builder.addStep(
     ShellCommand(command='cp package/*.rpm ../../moblin-results/libchk-me',
                  name="copypkg3"))
 
+sigchk_data_builder = factory.BuildFactory()
+sigchk_data_builder.addStep(Bzr(baseURL=bzr_toplevel, 
+                                defaultBranch="moblin/devel/moblin-functions-signature-checker-data",
+                                mode="copy", timeout=60*60))
+sigchk_data_builder.addStep(
+    ShellCommand(command=['rm', '-rf', 
+                          '../../moblin-results/moblin-functions-signature-checker-data'],
+                 name="copypkg1"))
+sigchk_data_builder.addStep(
+    ShellCommand(command=['mkdir', '-p', 
+                          '../../moblin-results/moblin-functions-signature-checker-data'],
+                 name="copypkg2"))
+sigchk_data_builder.addStep(
+    ShellCommand(command="cd package && make",
+                 name="build", timeout=60*60))
+sigchk_data_builder.addStep(
+    ShellCommand(command='cp package/*.rpm ../../moblin-results/moblin-functions-signature-checker-data',
+                 name="copypkg3"))
+
 results_builder = factory.BuildFactory()
 results_builder.addStep(ShellCommand(command=["tar", "czf", 
                                               "moblin-results.tar.gz", 
@@ -308,6 +330,11 @@ c['builders'] = [
       'category': 'moblin' },
     { 'name': 'build-libchk-me', 'slavenames': ['lfbuild-moblin'],
       'builddir': 'build-libchk-me', 'factory': libchk_me_builder,
+      'category': 'moblin' },
+    { 'name': 'build-moblin-functions-signature-checker-data', 
+      'slavenames': ['lfbuild-moblin'],
+      'builddir': 'build-moblin-functions-signature-checker-data', 
+      'factory': sigchk_data_builder,
       'category': 'moblin' },
     { 'name': 'build-moblin-results', 'slavenames': ['lfbuild-moblin'],
       'builddir': 'build-moblin-results', 'factory': results_builder,
