Rename the new function signature checker builds.

--- a/moblin_master.cfg
+++ b/moblin_master.cfg
@@ -26,9 +26,8 @@ moblin_osv_tests_projects = ["moblin-test-kernel", "moblin-test-media",
                              "moblin-test-graphics", "moblin-test-perf-power",
                              "moblin-test-bickley"]
 moblin_change_sources = ["app-checker", "distribution-checker", 
-                         "moblin-functions-signature-checker-data", 
-                         "moblin-osv-tests", "moblin-isv-tests", "misc-test", 
-                         "moblin-xvfb"]
+                         "moblin-sigchk-data", "moblin-osv-tests", 
+                         "moblin-isv-tests", "misc-test", "moblin-xvfb"]
 
 
 # This is the dictionary that the buildmaster pays attention to. We also use
@@ -105,8 +104,8 @@ for (prj, branch_names) in [("build-moblin-osv-tests", ["moblin-osv-tests"]),
                              ["distribution-checker"]),
                             ("build-moblin-xvfb", ["moblin-xvfb"]),
                             ("build-libchk-me", ["misc-test"]),
-                            ("build-moblin-functions-signature-checker-data",
-                             ["moblin-functions-signature-checker-data"])]:
+                            ("build-moblin-sigchk-data",
+                             ["moblin-sigchk-data"])]:
     branches = ["moblin/devel/" + x for x in branch_names]
     prj_scheduler = \
         scheduler.AnyBranchScheduler(name=prj, branches=branches,
@@ -282,21 +281,21 @@ libchk_me_builder.addStep(
 
 sigchk_data_builder = factory.BuildFactory()
 sigchk_data_builder.addStep(Bzr(baseURL=bzr_toplevel, 
-                                defaultBranch="moblin/devel/moblin-functions-signature-checker-data",
+                                defaultBranch="moblin/devel/moblin-sigchk-data",
                                 mode="copy", timeout=60*60))
 sigchk_data_builder.addStep(
     ShellCommand(command=['rm', '-rf', 
-                          '../../moblin-results/moblin-functions-signature-checker-data'],
+                          '../../moblin-results/moblin-sigchk-data'],
                  name="copypkg1"))
 sigchk_data_builder.addStep(
     ShellCommand(command=['mkdir', '-p', 
-                          '../../moblin-results/moblin-functions-signature-checker-data'],
+                          '../../moblin-results/moblin-sigchk-data'],
                  name="copypkg2"))
 sigchk_data_builder.addStep(
     ShellCommand(command="cd package && make",
                  name="build", timeout=60*60))
 sigchk_data_builder.addStep(
-    ShellCommand(command='cp package/*.rpm ../../moblin-results/moblin-functions-signature-checker-data',
+    ShellCommand(command='cp package/*.rpm ../../moblin-results/moblin-sigchk-data',
                  name="copypkg3"))
 
 results_builder = factory.BuildFactory()
@@ -331,10 +330,8 @@ c['builders'] = [
     { 'name': 'build-libchk-me', 'slavenames': ['lfbuild-moblin'],
       'builddir': 'build-libchk-me', 'factory': libchk_me_builder,
       'category': 'moblin' },
-    { 'name': 'build-moblin-functions-signature-checker-data', 
-      'slavenames': ['lfbuild-moblin'],
-      'builddir': 'build-moblin-functions-signature-checker-data', 
-      'factory': sigchk_data_builder,
+    { 'name': 'build-moblin-sigchk-data', 'slavenames': ['lfbuild-moblin'],
+      'builddir': 'build-moblin-sigchk-data', 'factory': sigchk_data_builder,
       'category': 'moblin' },
     { 'name': 'build-moblin-results', 'slavenames': ['lfbuild-moblin'],
       'builddir': 'build-moblin-results', 'factory': results_builder,
