--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -52,8 +52,8 @@ lsb_pkg_subdir_projects = ["app-checker", "azov-qt3-tests", "azov-qt4-tests",
                            "makelsbpkg", "olver-core-tests", "perl-test",
                            "printing-test", "python-test", "qmtest-harness",
                            "runtime-test", "t2c-cpp-tests", 
-                           "t2c-desktop-tests", "task-pkgs", "tet-harness", 
-                           "xts5-test"]
+                           "t2c-desktop-tests", "t2c-runtime-tests", 
+                           "task-pkgs", "tet-harness", "xts5-test"]
 lsb_packaging_projects = [("lsbappchk", "misc-test"),
                           ("lsbarchk", "misc-test"),
                           ("lsbcmdchk", "misc-test"),
@@ -69,7 +69,8 @@ lsb_dependencies = { "tet-harness": ["appbat", "azov-qt3-tests",
                                      "azov-qt4-tests", "azov-xml2-tests", 
                                      "desktop-test", "printing-test", 
                                      "runtime-test", "t2c-cpp-tests", 
-                                     "t2c-desktop-tests", "xts5-test"],
+                                     "t2c-desktop-tests", "t2c-runtime-tests",
+                                     "xts5-test"],
                      "qmtest-harness": ["libstdcpp-test"],
                      "lsbappchk-python": ["python-test"],
                      "libbat": ["appbat"],
