--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -336,11 +336,11 @@ for arch in lsb_archs:
 
     build_sdk = factory.BuildFactory()
     build_sdk.addStep(Bzr(repourl=os.path.join(bzr_toplevel, 
-                                               "lsb/devel/packaging"),
-                          mode="copy"))
-    build_sdk.addStep(Bzr(repourl=os.path.join(bzr_toplevel, 
                                                "lsb/devel/build_env"), 
-                          mode="update", workdir="build_env"))
+                          mode="copy", workdir="build_env"))
+    build_sdk.addStep(Bzr(repourl=os.path.join(bzr_toplevel, 
+                                               "lsb/devel/packaging"),
+                          mode="clobber"))
     build_sdk.addStep(ShellCommand(command=['reset-sdk'], name="reset-sdk"))
     build_sdk.addStep(ShellCommand(command=["rm", "-rf", 
                                             "../sdk-results"],
