Fix the SDK build steps to work with production/branch builds.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -16,7 +16,7 @@ from buildbot.status import html
 from buildbot.status import words
 from buildbot.status.web.auth import HTPasswdAuth
 
-from lfbuildbot import PropMasterShellCommand, LSBBuildPackage, \
+from lfbuildbot import LSBBuildCommand, LSBBuildPackage, \
     LSBBuildFromPackaging
 
 from bzr_buildbot import BzrPoller
@@ -335,12 +335,16 @@ for arch in lsb_archs:
     # the SDK, and install it.
 
     build_sdk = factory.BuildFactory()
-    build_sdk.addStep(Bzr(repourl=os.path.join(bzr_toplevel, 
-                                               "lsb/devel/build_env"), 
+    build_sdk.addStep(Bzr(baseURL=bzr_toplevel, 
+                          defaultBranch="lsb/devel/build_env", 
                           mode="copy", workdir="build_env"))
-    build_sdk.addStep(Bzr(repourl=os.path.join(bzr_toplevel, 
-                                               "lsb/devel/packaging"),
-                          mode="clobber"))
+    build_sdk.addStep(ShellCommand(command=["rm", "-rf", "../packaging"],
+                                   name="clear-old-packaging"))
+    build_sdk.addStep(ShellCommand(
+            command=["bzr", "checkout", 
+                     os.path.join(bzr_toplevel, "lsb/devel/packaging"),
+                     "../packaging"],
+            name="checkout-packaging"))
     build_sdk.addStep(ShellCommand(command=['reset-sdk'], name="reset-sdk"))
     build_sdk.addStep(ShellCommand(command=["rm", "-rf", 
                                             "../sdk-results"],
@@ -349,10 +353,10 @@ for arch in lsb_archs:
         ShellCommand(command=["mkdir", "-p", "../sdk-results/build_env"],
                      name="mkdir_base", workdir="build_env"))
     build_sdk.addStep(
-        ShellCommand(command="cd package && make clean " + 
-                             "&& make BZRTREES=../..", 
-                     name="build_base", workdir="build_env", 
-                     haltOnFailure=True))
+        LSBBuildCommand(command="cd package && make clean " + 
+                                "&& make BZRTREES=../..", 
+                        name="build_base", workdir="build_env", 
+                        haltOnFailure=True))
     build_sdk.addStep(
         ShellCommand(command="cp package/*.rpm ../sdk-results/build_env", 
                      name="copy_base", workdir="build_env"))
@@ -365,9 +369,9 @@ for arch in lsb_archs:
                                        name="mkdir_" + sdk_project))
         sdk_command = "cd " + sdk_project + \
             " && make rpm_package BZR_ROOT=../.."
-        build_sdk.addStep(ShellCommand(command=sdk_command,
-                                       name="build_" + sdk_project,
-                                       haltOnFailure=True))
+        build_sdk.addStep(LSBBuildCommand(command=sdk_command,
+                                          name="build_" + sdk_project,
+                                          haltOnFailure=True))
         build_sdk.addStep(
             ShellCommand(command="cp %s/*.rpm ../sdk-results/%s" 
                                  % (sdk_project, sdk_project),
