Fix production build code so it works.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -356,7 +356,7 @@ for arch in lsb_archs:
         LSBBuildCommand(command="cd package && make clean " + 
                                 "&& make BZRTREES=../..", 
                         name="build_base", workdir="build_env", 
-                        haltOnFailure=True))
+                        haltOnFailure=True, makeargs=True))
     build_sdk.addStep(
         ShellCommand(command="cp package/*.rpm ../sdk-results/build_env", 
                      name="copy_base", workdir="build_env"))
@@ -371,7 +371,7 @@ for arch in lsb_archs:
             " && make rpm_package BZR_ROOT=../.."
         build_sdk.addStep(LSBBuildCommand(command=sdk_command,
                                           name="build_" + sdk_project,
-                                          haltOnFailure=True))
+                                          haltOnFailure=True, makeargs=True))
         build_sdk.addStep(
             ShellCommand(command="cp %s/*.rpm ../sdk-results/%s" 
                                  % (sdk_project, sdk_project),
