Actually use the packaging dir we checkout in SDK builds.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -339,16 +339,18 @@ for arch in lsb_archs:
                           defaultBranch="lsb/devel/build_env", 
                           mode="copy", workdir="build_env"))
     build_sdk.addStep(ShellCommand(command=["rm", "-rf", "../packaging"],
-                                   name="clear-old-packaging"))
+                                   name="clear-old-packaging",
+                                   workdir="build_env"))
     build_sdk.addStep(ShellCommand(
             command=["bzr", "checkout", 
                      os.path.join(bzr_toplevel, "lsb/devel/packaging"),
                      "../packaging"],
-            name="checkout-packaging"))
-    build_sdk.addStep(ShellCommand(command=['reset-sdk'], name="reset-sdk"))
+            name="checkout-packaging", workdir="build_env"))
+    build_sdk.addStep(ShellCommand(command=['reset-sdk'], name="reset-sdk",
+                                   workdir="build_env"))
     build_sdk.addStep(ShellCommand(command=["rm", "-rf", 
                                             "../sdk-results"],
-                                   name="rm-old-results"))
+                                   name="rm-old-results", workdir="build_env"))
     build_sdk.addStep(
         ShellCommand(command=["mkdir", "-p", "../sdk-results/build_env"],
                      name="mkdir_base", workdir="build_env"))
@@ -366,22 +368,25 @@ for arch in lsb_archs:
     for sdk_project in lsb_bzr_sdk_projects:
         build_sdk.addStep(ShellCommand(command=['mkdir', '-p', 
                                                 '../sdk-results/' + sdk_project],
-                                       name="mkdir_" + sdk_project))
+                                       name="mkdir_" + sdk_project,
+                                       workdir="packaging"))
         sdk_command = "cd " + sdk_project + \
             " && make rpm_package BZR_ROOT=../.."
         build_sdk.addStep(LSBBuildCommand(command=sdk_command,
                                           name="build_" + sdk_project,
+                                          workdir="packaging",
                                           haltOnFailure=True, makeargs=True))
         build_sdk.addStep(
             ShellCommand(command="cp %s/*.rpm ../sdk-results/%s" 
                                  % (sdk_project, sdk_project),
-                         name="copy_" + sdk_project))
+                         name="copy_" + sdk_project, workdir="packaging"))
     build_sdk.addStep(ShellCommand(command=['tar', 'czf', '../sdk-results.tar.gz',
                                             '../sdk-results'],
-                                   name="pack-sdk"))
+                                   name="pack-sdk", workdir="build_env"))
     build_sdk.addStep(
         FileUpload(slavesrc="../sdk-results.tar.gz", 
-                   masterdest="lsb-sdk-results-%s.tar.gz" % arch))
+                   masterdest="lsb-sdk-results-%s.tar.gz" % arch,
+                   workdir="build_env"))
     build_sdk.addStep(
         trigger.Trigger(name="trigger-update-sdk-" + arch,
                         schedulerNames=['update-sdk-' + arch],
