Detach libbat from appbat, and tie it to the SDK instead.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -120,7 +120,7 @@ c = BuildmasterConfig = {}
 
 def prioritize(buildmaster, builders):
     sdk_builders = []
-    for jobname in ("build-sdk", "update-sdk"):
+    for jobname in ("build-sdk", "update-sdk", "libbat"):
         for builder in builders[:]:
             if builder.name[:len(jobname)] == jobname:
                 builders.remove(builder)
@@ -219,16 +219,16 @@ sch_weekly_names = []
 for arch in lsb_archs:
     sch_update = scheduler.Triggerable(name="update-sdk-" + arch,
                                        builderNames=["update-sdk-" + arch])
-    sch_libbat = scheduler.Scheduler(name="sch-libbat-" + arch,
+    sch_libbat = scheduler.Triggerable(name="sch-libbat-" + arch,
+                                       builderNames=["libbat-" + arch])
+    sch_appbat = scheduler.Scheduler(name="sch-appbat-" + arch,
                                      branch="lsb/devel/appbat",
-                                     builderNames=["libbat-" + arch],
+                                     builderNames=["appbat-" + arch],
                                      treeStableTimer=slow_stable_timer_seconds)
-    sch_appbat = scheduler.Triggerable(name="sch-appbat-" + arch,
-                                       builderNames=["appbat-" + arch])
 
     c['schedulers'].extend([sch_update, sch_libbat, sch_appbat])
 
-    sch_weekly_names.append("libbat-" + arch)
+    sch_weekly_names.append("appbat-" + arch)
 
 # Package subdir schedulers.
 
@@ -391,6 +391,10 @@ for arch in lsb_archs:
         trigger.Trigger(name="trigger-update-sdk-" + arch,
                         schedulerNames=['update-sdk-' + arch],
                         waitForFinish=False, updateSourceStamp=False))
+    build_sdk.addStep(
+        trigger.Trigger(name="trigger-libbat-" + arch,
+                        schedulerNames=['sch-libbat-' + arch],
+                        waitForFinish=False, updateSourceStamp=False))
     lsb_builds.append(
         { 'name': 'build-sdk-' + arch, 'slavenames': ["lfbuild-" + arch],
           'builddir': 'build-sdk-' + arch, 'factory': build_sdk, 
@@ -543,9 +547,6 @@ for arch in lsb_archs:
                    masterdest="libbat-results-%s.tar.gz" % build_arch,
                    workdir="appbat", name="upload-results"))
     add_dependency_triggers("libbat", build_arch, libbat)
-    libbat.addStep(trigger.Trigger(schedulerNames=["sch-appbat-" + build_arch],
-                                   waitForFinish=False,
-                                   updateSourceStamp=False))
 
     lsb_builds.append(
         { 'name': 'libbat-' + build_arch, 'slavenames': buildslaves,
