Add 'reset-sdk' jobs to enable builds with a production SDK.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -331,8 +331,9 @@ indep_added = []
 for arch in lsb_archs:
     # SDK.  This is unique because it is used to build everything else.  So
     # we have to build it with a known good SDK, install it, and use that
-    # to build everything else.  There are two separate jobs here: build
-    # the SDK, and install it.
+    # to build everything else.  The build is separated into two parts: 
+    # build the SDK, and install it.  Additionally, a third job is included
+    # that allows a manual reset to a production SDK.
 
     build_sdk = factory.BuildFactory()
     build_sdk.addStep(Bzr(baseURL=bzr_toplevel, 
@@ -407,6 +408,13 @@ for arch in lsb_archs:
     lsb_builds.append(
         { 'name': 'update-sdk-' + arch, 'slavenames': ["lfbuild-" + arch],
           'builddir': 'update-sdk-' + arch, 'factory': update_sdk, 
+          'category': 'lsb' })
+
+    reset_sdk = factory.BuildFactory()
+    reset_sdk.addStep(ShellCommand(command=['reset-sdk'], name="reset-sdk"))
+    lsb_builds.append(
+        { 'name': 'reset-sdk-' + arch, 'slavenames': ["lfbuild-" + arch],
+          'builddir': 'reset-sdk-' + arch, 'factory': reset_sdk, 
           'category': 'lsb' })
 
     # "Package subdir" projects.  These have a "package" directory in
