Cache tarball downloads for libbat.
If this works well, we should port to the appbat build as well.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -537,6 +537,15 @@ for arch in lsb_archs:
                                 workdir="appbat", name="clear-old-results"))
     libbat.addStep(ShellCommand(command=["mkdir", "-p", "../results"],
                                 workdir="appbat", name="create-results-dir"))
+    libbat.addStep(ShellCommand(command=["mkdir", "-p", 
+                                         "/tmp/appbat-pkgcache"],
+                                workdir="appbat", name="create-pkgcache"))
+    libbat.addStep(ShellCommand(command="cp /tmp/appbat-pkgcache/* packages",
+                                workdir="appbat", name="copy-pkgcache",
+                                flunkOnFailure=False, haltOnFailure=False))
+    libbat.addStep(ShellCommand(command="rm -f /tmp/appbat-pkgcache/*",
+                                workdir="appbat", name="clear-pkgcache",
+                                flunkOnFailure=False, haltOnFailure=False))
     libbat.addStep(Configure(command=["./configure.libbat"], workdir="appbat"))
     libbat.addStep(Compile(command=["make", "libbat", "ENTITYCHECK_QUIET=-q"], 
                            workdir="appbat"))
@@ -554,6 +563,10 @@ for arch in lsb_archs:
         FileUpload(slavesrc="../results.tar.gz", 
                    masterdest="libbat-results-%s.tar.gz" % build_arch,
                    workdir="appbat", name="upload-results"))
+    libbat.addStep(
+        ShellCommand(command="cp packages/*tar* /tmp/appbat-pkgcache",
+                     workdir="appbat", name="save-pkgcache",
+                     flunkOnFailure=False, haltOnFailure=False))
     add_dependency_triggers("libbat", build_arch, libbat)
 
     lsb_builds.append(
