--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -386,7 +386,7 @@ for arch in lsb_archs:
                                    name="pack-sdk", workdir="build_env"))
     build_sdk.addStep(
         FileUpload(slavesrc="../sdk-results.tar.gz", 
-                   masterdest="lsb-sdk-results-%s.tar.gz" % arch,
+                   masterdest=WithProperties("lsb-sdk-%%(branch_name:-results)s-%s.tar.gz" % arch),
                    workdir="build_env"))
     build_sdk.addStep(
         trigger.Trigger(name="trigger-update-sdk-" + arch,
@@ -450,10 +450,10 @@ for arch in lsb_archs:
         b.addStep(ShellCommand(command=["tar", "czf", "../results.tar.gz", 
                                         "../results"],
                                name="pack-results"))
-        b.addStep(FileUpload(slavesrc="../results.tar.gz", 
-                             masterdest="%s-results-%s.tar.gz" % (prj, 
-                                                                  build_arch),
-                             name="upload-results"))
+        b.addStep(
+            FileUpload(slavesrc="../results.tar.gz", 
+                       masterdest=WithProperties("%s-%%(branch_name:-results)s-%s.tar.gz" % (prj, build_arch)),
+                       name="upload-results"))
         add_dependency_triggers(prj, build_arch, b)
         b.addStep(ShellCommand(command=["rm", "-rf", "../results"],
                                name="clear-results-dir"))
@@ -505,10 +505,10 @@ for arch in lsb_archs:
         b.addStep(ShellCommand(command=["tar", "czf", "../results.tar.gz", 
                                         "../results"],
                                name="pack-results"))
-        b.addStep(FileUpload(slavesrc="../results.tar.gz", 
-                             masterdest="%s-results-%s.tar.gz" % (prj, 
-                                                                  build_arch),
-                             name="upload-results"))
+        b.addStep(
+            FileUpload(slavesrc="../results.tar.gz", 
+                       masterdest=WithProperties("%s-%%(branch_name:-results)s-%s.tar.gz" % (prj, build_arch)),
+                       name="upload-results"))
         add_dependency_triggers(prj, build_arch, b)
         b.addStep(ShellCommand(command=["rm", "-rf", "../results"],
                                name="clear-results-dir"))
@@ -549,8 +549,9 @@ for arch in lsb_archs:
     libbat.addStep(Configure(command=["./configure.libbat"], workdir="appbat"))
     libbat.addStep(Compile(command=["make", "libbat", "ENTITYCHECK_QUIET=-q"], 
                            workdir="appbat"))
-    libbat.addStep(Compile(command=["make", "check-libbat"], workdir="appbat",
-                           name="check-libbat", haltOnFailure=True))
+    libbat.addStep(LSBBuildCommand(command=["make", "check-libbat"],
+                                   workdir="appbat",
+                                   name="check-libbat", haltOnFailure=True))
     libbat.addStep(ShellCommand(command="cd rpm && make libbat",
                                 name="build-pkg", workdir="appbat"))
     libbat.addStep(ShellCommand(
@@ -561,7 +562,7 @@ for arch in lsb_archs:
                                 workdir="appbat", name="pack-results"))
     libbat.addStep(
         FileUpload(slavesrc="../results.tar.gz", 
-                   masterdest="libbat-results-%s.tar.gz" % build_arch,
+                   masterdest=WithProperties("libbat-%%(branch_name:-results)s-%s.tar.gz" % build_arch),
                    workdir="appbat", name="upload-results"))
     libbat.addStep(
         ShellCommand(command="cp packages/*tar* /tmp/appbat-pkgcache",
@@ -594,19 +595,22 @@ for arch in lsb_archs:
     appbat.addStep(Compile(command=["make", "appbat", "ENTITYCHECK_QUIET=-q"], 
                            workdir="appbat", name="build-appbat", 
                            timeout=1800))
-    appbat.addStep(Compile(command=["make", "check-appbat"], workdir="appbat",
-                           name="check-appbat", haltOnFailure=True))
+    appbat.addStep(LSBBuildCommand(command=["make", "check-appbat"],
+                                   workdir="appbat",
+                                   name="check-appbat", haltOnFailure=True))
     appbat.addStep(Compile(command=["make", "desktop", 
                                     "ENTITYCHECK_QUIET=-q"], 
                            workdir="appbat", name="build-desktop", 
                            timeout=1800))
-    appbat.addStep(Compile(command=["make", "check-desktop"], workdir="appbat",
-                           name="check-desktop", haltOnFailure=True))
+    appbat.addStep(LSBBuildCommand(command=["make", "check-desktop"],
+                                   workdir="appbat",
+                                   name="check-desktop", haltOnFailure=True))
     appbat.addStep(Compile(command=["make", "addons", "ENTITYCHECK_QUIET=-q"], 
                            workdir="appbat", name="build-addons",
                            timeout=1800))
-    appbat.addStep(Compile(command=["make", "check-addons"], workdir="appbat",
-                           name="check-addons", haltOnFailure=True))
+    appbat.addStep(LSBBuildCommand(command=["make", "check-addons"],
+                                   workdir="appbat",
+                                   name="check-addons", haltOnFailure=True))
     appbat.addStep(ShellCommand(command="cd rpm && make",
                                 name="build-pkg", workdir="appbat"))
     appbat.addStep(ShellCommand(
@@ -620,7 +624,7 @@ for arch in lsb_archs:
                                 workdir="appbat", name="pack-results"))
     appbat.addStep(
         FileUpload(slavesrc="../results.tar.gz", 
-                   masterdest="appbat-results-%s.tar.gz" % build_arch,
+                   masterdest=WithProperties("appbat-%%(branch_name:-results)s-%s.tar.gz" % build_arch),
                    workdir="appbat", name="upload-results", 
                    flunkOnFailure=False))
     add_dependency_triggers("appbat", build_arch, appbat)
