Use the new package names when building snapshots, and add t2c-alsa-tests.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -51,7 +51,7 @@ lsb_pkg_subdir_projects = ["app-checker", "azov-qt3-tests", "azov-qt4-tests",
                            "lsbappchk-sh", "lsbsi-tools", 
                            "makelsbpkg", "olver-core-tests", "perl-test",
                            "printing-test", "python-test", "qmtest-harness",
-                           "runtime-test", "t2c-cpp-tests", 
+                           "runtime-test", "t2c-alsa-tests", "t2c-cpp-tests", 
                            "t2c-desktop-tests", "t2c-runtime-tests", 
                            "task-pkgs", "tet-harness", "xts5-test"]
 lsb_packaging_projects = [("lsbappchk", "misc-test"),
