Check libbat cache before building, and clear it out if it fails.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -547,6 +547,8 @@ for arch in lsb_archs:
                                 workdir="appbat", name="clear-pkgcache",
                                 flunkOnFailure=False, haltOnFailure=False))
     libbat.addStep(Configure(command=["./configure.libbat"], workdir="appbat"))
+    libbat.addStep(ShellCommand(command="make check || rm -f packages/*.tar*",
+                                workdir="appbat", name="check-pkgcache"))
     libbat.addStep(Compile(command=["make", "libbat", "ENTITYCHECK_QUIET=-q"], 
                            workdir="appbat"))
     libbat.addStep(LSBBuildCommand(command=["make", "check-libbat"],
